fix: Correções determinísticas no Tetris - line clearing, game over, animação, shapes e replay
Corrige remoção de linhas e game over (todas as colunas)

Adiciona transição automática do estado ANIMATING_LINES

Separa evento MoveDown de TimeTick (desacopla input do clock)

Implementa definição explícita de todas as peças (S, Z, etc.) e wall kick simplificado

Encapsula geração de peças exclusivamente no domínio (createInitial(seed))

Replay agora puramente determinístico (seed + eventos)

Atualiza testes e demais classes para a nova API