@@ -1,6 +1,9 @@
 package com.tetris.domain;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 public record Tetromino(Shape shape, MatrixPosition position, Orientation orientation) {
 
@@ -19,50 +22,136 @@ public record Tetromino(Shape shape, MatrixPosition position, Orientation orient
                 case WEST -> NORTH;
             };
         }
+
+        public Orientation rotateCounterClockwise() {
+            return switch (this) {
+                case NORTH -> WEST;
+                case WEST -> SOUTH;
+                case SOUTH -> EAST;
+                case EAST -> NORTH;
+            };
+        }
     }
 
-    /**
-     * Retorna uma nova instância deslocada lateralmente ou verticalmente.
-     */
+    // ================================================================
+    // Definição imutável das células para cada (Shape, Orientation)
+    // ================================================================
+    private static final Map<Shape, Map<Orientation, List<MatrixPosition>>> CELLS_MAP = Map.of(
+            Shape.I, Map.of(
+                    Orientation.NORTH, List.of(
+                            new MatrixPosition(0, 1), new MatrixPosition(1, 1),
+                            new MatrixPosition(2, 1), new MatrixPosition(3, 1)),
+                    Orientation.EAST, List.of(
+                            new MatrixPosition(1, 0), new MatrixPosition(1, 1),
+                            new MatrixPosition(1, 2), new MatrixPosition(1, 3)),
+                    Orientation.SOUTH, List.of(
+                            new MatrixPosition(0, 2), new MatrixPosition(1, 2),
+                            new MatrixPosition(2, 2), new MatrixPosition(3, 2)),
+                    Orientation.WEST, List.of(
+                            new MatrixPosition(2, 0), new MatrixPosition(2, 1),
+                            new MatrixPosition(2, 2), new MatrixPosition(2, 3))),
+            Shape.J, Map.of(
+                    Orientation.NORTH, List.of(
+                            new MatrixPosition(0, 1), new MatrixPosition(1, 1),
+                            new MatrixPosition(2, 0), new MatrixPosition(2, 1)),
+                    Orientation.EAST, List.of(
+                            new MatrixPosition(1, 0), new MatrixPosition(1, 1),
+                            new MatrixPosition(1, 2), new MatrixPosition(2, 2)),
+                    Orientation.SOUTH, List.of(
+                            new MatrixPosition(0, 1), new MatrixPosition(0, 2),
+                            new MatrixPosition(1, 1), new MatrixPosition(2, 1)),
+                    Orientation.WEST, List.of(
+                            new MatrixPosition(0, 0), new MatrixPosition(1, 0),
+                            new MatrixPosition(1, 1), new MatrixPosition(1, 2))),
+            Shape.L, Map.of(
+                    Orientation.NORTH, List.of(
+                            new MatrixPosition(0, 1), new MatrixPosition(1, 1),
+                            new MatrixPosition(2, 1), new MatrixPosition(2, 2)),
+                    Orientation.EAST, List.of(
+                            new MatrixPosition(1, 0), new MatrixPosition(1, 1),
+                            new MatrixPosition(1, 2), new MatrixPosition(2, 0)),
+                    Orientation.SOUTH, List.of(
+                            new MatrixPosition(0, 0), new MatrixPosition(0, 1),
+                            new MatrixPosition(1, 1), new MatrixPosition(2, 1)),
+                    Orientation.WEST, List.of(
+                            new MatrixPosition(0, 2), new MatrixPosition(1, 0),
+                            new MatrixPosition(1, 1), new MatrixPosition(1, 2))),
+            Shape.O, Map.of(
+                    Orientation.NORTH, List.of(
+                            new MatrixPosition(0, 1), new MatrixPosition(0, 2),
+                            new MatrixPosition(1, 1), new MatrixPosition(1, 2)),
+                    Orientation.EAST, List.of(
+                            new MatrixPosition(0, 1), new MatrixPosition(0, 2),
+                            new MatrixPosition(1, 1), new MatrixPosition(1, 2)),
+                    Orientation.SOUTH, List.of(
+                            new MatrixPosition(0, 1), new MatrixPosition(0, 2),
+                            new MatrixPosition(1, 1), new MatrixPosition(1, 2)),
+                    Orientation.WEST, List.of(
+                            new MatrixPosition(0, 1), new MatrixPosition(0, 2),
+                            new MatrixPosition(1, 1), new MatrixPosition(1, 2))),
+            // ============================================================
+            // PEÇA S – com EAST e WEST corrigidos (não mais quadrado 2x2)
+            // ============================================================
+            Shape.S, Map.of(
+                    Orientation.NORTH, List.of(
+                            new MatrixPosition(0, 1), new MatrixPosition(0, 2),
+                            new MatrixPosition(1, 0), new MatrixPosition(1, 1)),
+                    Orientation.EAST, List.of(
+                            new MatrixPosition(0, 1), new MatrixPosition(1, 1),
+                            new MatrixPosition(1, 2), new MatrixPosition(2, 2)),
+                    Orientation.SOUTH, List.of(
+                            new MatrixPosition(0, 1), new MatrixPosition(0, 2),
+                            new MatrixPosition(1, 0), new MatrixPosition(1, 1)),
+                    Orientation.WEST, List.of(
+                            new MatrixPosition(0, 1), new MatrixPosition(1, 1),
+                            new MatrixPosition(1, 2), new MatrixPosition(2, 2))),
+            Shape.T, Map.of(
+                    Orientation.NORTH, List.of(
+                            new MatrixPosition(0, 1), new MatrixPosition(1, 0),
+                            new MatrixPosition(1, 1), new MatrixPosition(1, 2)),
+                    Orientation.EAST, List.of(
+                            new MatrixPosition(1, 1), new MatrixPosition(0, 1),
+                            new MatrixPosition(1, 0), new MatrixPosition(2, 1)),
+                    Orientation.SOUTH, List.of(
+                            new MatrixPosition(1, 0), new MatrixPosition(1, 1),
+                            new MatrixPosition(1, 2), new MatrixPosition(2, 1)),
+                    Orientation.WEST, List.of(
+                            new MatrixPosition(0, 1), new MatrixPosition(1, 1),
+                            new MatrixPosition(1, 2), new MatrixPosition(2, 1))),
+            // ============================================================
+            // PEÇA Z – com EAST e WEST corrigidos
+            // ============================================================
+            Shape.Z, Map.of(
+                    Orientation.NORTH, List.of(
+                            new MatrixPosition(0, 0), new MatrixPosition(0, 1),
+                            new MatrixPosition(1, 1), new MatrixPosition(1, 2)),
+                    Orientation.EAST, List.of(
+                            new MatrixPosition(0, 2), new MatrixPosition(1, 1),
+                            new MatrixPosition(1, 2), new MatrixPosition(2, 1)),
+                    Orientation.SOUTH, List.of(
+                            new MatrixPosition(0, 0), new MatrixPosition(0, 1),
+                            new MatrixPosition(1, 1), new MatrixPosition(1, 2)),
+                    Orientation.WEST, List.of(
+                            new MatrixPosition(0, 2), new MatrixPosition(1, 1),
+                            new MatrixPosition(1, 2), new MatrixPosition(2, 1))));
+
     public Tetromino move(int deltaRow, int deltaCol) {
         return new Tetromino(this.shape, this.position.add(deltaRow, deltaCol), this.orientation);
     }
 
-    /**
-     * Retorna uma nova instância rotacionada em sentido horário.
-     */
     public Tetromino rotate() {
         return new Tetromino(this.shape, this.position, this.orientation.rotateClockwise());
     }
 
-    /**
-     * Calcula dinamicamente as posições absolutas ocupadas pelos blocos da peça na
-     * matriz
-     * com base no seu formato (Shape) e orientação atual.
-     */
     public List<MatrixPosition> currentCells() {
-        // Matriz de deslocamentos relativos locais [row, col] para cada formato e
-        // rotação
-        int[][] offsets = switch (this.shape) {
-            case O -> new int[][] { { 0, 0 }, { 0, 1 }, { 1, 0 }, { 1, 1 } }; // Formato O não muda com rotação
-            case I -> switch (this.orientation) {
-                case NORTH, SOUTH -> new int[][] { { 0, -1 }, { 0, 0 }, { 0, 1 }, { 0, 2 } };
-                case EAST, WEST -> new int[][] { { -1, 0 }, { 0, 0 }, { 1, 0 }, { 2, 0 } };
-            };
-            case T -> switch (this.orientation) {
-                case NORTH -> new int[][] { { 0, -1 }, { 0, 0 }, { 0, 1 }, { -1, 0 } };
-                case EAST -> new int[][] { { -1, 0 }, { 0, 0 }, { 1, 0 }, { 0, 1 } };
-                case SOUTH -> new int[][] { { 0, -1 }, { 0, 0 }, { 0, 1 }, { 1, 0 } };
-                case WEST -> new int[][] { { -1, 0 }, { 0, 0 }, { 1, 0 }, { 0, -1 } };
-            };
-            // Simplificação para os demais formatos (J, L, S, Z) mantendo 4 blocos padrão
-            default -> new int[][] { { 0, -1 }, { 0, 0 }, { 0, 1 }, { 1, 0 } };
-        };
-
-        return List.of(
-                this.position.add(offsets[0][0], offsets[0][1]),
-                this.position.add(offsets[1][0], offsets[1][1]),
-                this.position.add(offsets[2][0], offsets[2][1]),
-                this.position.add(offsets[3][0], offsets[3][1]));
+        Map<Orientation, List<MatrixPosition>> shapeMap = CELLS_MAP.get(shape);
+        if (shapeMap == null)
+            return List.of();
+        List<MatrixPosition> relative = shapeMap.getOrDefault(orientation, List.of());
+        List<MatrixPosition> absolute = new ArrayList<>(relative.size());
+        for (MatrixPosition rel : relative) {
+            absolute.add(position.add(rel.row(), rel.col()));
+        }
+        return Collections.unmodifiableList(absolute);
     }
 }
